--- a/lab2/flexbox-css/style/style.css
+++ b/lab2/flexbox-css/style/style.css
@@ -1,6 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
 section {
     display: flex;
-    height: 700px;
+    height: 600px;
 }
 
 header,
@@ -8,125 +12,80 @@ footer {
     display: flex;
     background-color: aqua;
     border: black 1px solid;
-    height: 100px;
+    height: 150px;
     align-items: center;
     justify-content: space-between;
 }
 
 article {
-    flex: 2;
+    display: flex;
+    flex: 1;
+    flex-flow: row wrap;
 }
 
-header div {
+header div,
+footer div {
     background-color: #ffffff;
     border: 1px black solid;
     text-align: right;
-    padding: 0px 5px;
-    margin-right: 10px;
     width: 100px;
     height: 40px;
+    padding: 0px 5px;
+    margin: 0 10px;
 }
 
 h1 {
     margin: 0 10px;
+    font-size: 2em;
 }
 
-
-/*
-div {
+#col-2,
+#col-3,
+#col-4,
+#col-5 {
+    display: flex;
     border: black 1px solid;
-}
-
-.white-box {
-    background-color: #ffffff;
-    border: 1px black solid;
-    text-align: right;
-    width: 200px;
-    padding: 5px 0;
-}
-
-footer div,
-header h1 {
-    float: left;
-    margin: 50px;
-}
-
-header div,
-footer h1 {
-    float: right;
-    margin: 50px;
-}
-
-.text {
-    margin: 0 5%;
-}
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.column {
-    width: 50%;
-    float: left;
-    border: 0px;
-}
-
-.col-2,
-.col-3,
-.col-4,
-.col-5 {
-    float: left;
-    text-align: right;
-}
-
-.col-3,
-.col-4,
-.col-5 {
-    margin-left: 10%;
-}
-
-.col-2 {
-    background-color: chartreuse;
-    height: 50%;
-    display: flex;
-    align-items: center;
-    width: 45%;
-}
-
-.col-3 {
     background-color: yellow;
-    height: 50%;
-    display: flex;
     align-items: center;
-    width: 45%;
+    justify-content: flex-end;
+    flex: 1;
 }
 
-.col-6 {
+#col-2 {
+    background-color: chartreuse;
+    height: 80%;
+}
+
+#col-3 {
+    background-color: yellow;
+    margin-left: 10%;
+    height: 80%;
+}
+
+#col-6 {
+    display: flex;
+    border: black 1px solid;
     background-color: orange;
-    width: 100%;
     text-align: left;
-    float: left;
+    align-items: center;
     height: 20%;
-    display: flex;
-    align-items: center;
+    flex: 1 100%;
 }
 
-.col-4 {
+#col-4,
+#col-5 {
+    display: flex;
     background-color: greenyellow;
-    height: 70%;
-    display: flex;
     align-items: center;
-    width: 40%;
+    flex: 1;
+    margin-left: 10%;
+    height: 100%;
 }
 
-.col-5 {
+#col-4 {
+    background-color: greenyellow;
+}
+
+#col-5 {
     background-color: orange;
-    height: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40%;
-} 
-*/
+}
