--- a/lab3/style/style.css
+++ b/lab3/style/style.css
@@ -46,8 +46,9 @@ h1 {
     display: flex;
     border: black 1px solid;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     flex: 1;
+    flex-direction: column;
 }
 
 #col-2 {
@@ -60,7 +61,6 @@ h1 {
     margin-left: 10%;
     height: 80%;
     flex-direction: column;
-    justify-content: center;
 }
 
 #col-6 {
@@ -76,7 +76,6 @@ h1 {
 #col-4,
 #col-5 {
     display: flex;
-    background-color: greenyellow;
     align-items: center;
     flex: 1;
     margin-left: 10%;
